--- a/src/main/resources/static/estilos/estilos.css
+++ b/src/main/resources/static/estilos/estilos.css
@@ -117,8 +117,8 @@ tr {
 
 .table {
 	position: relative;
-	margin-top: 30px;
-	border-radius: 0.25rem;
+	margin-top: 500px;
+	text-align: center;
 }
 
 label {
